# esp32-its-tap

./: .gitignore  CMakeLists.txt  README.md  default_8MB.csv  platformio.ini  sdkconfig.seeed_xiao_esp32c5
.github/workflows/: ci.yml
firmware/: platformio.ini
firmware/include/: board_status.h  serial_protocol.h  wifi_controller.h
firmware/src/: board_status.c  interface.options  main.c  modem_clocks.c  serial_protocol.c  wifi_controller.c
include/: esp_80211p.h  frame_builder.h  modem_clocks.h
interface/: interface.options  interface.proto
its-g5-tap-bridge/: Cargo.toml  build.rs
its-g5-tap-bridge/src/: error.rs  main.rs  serial_proto.rs
src/: CMakeLists.txt  esp_80211p_tx.c  frame_builder.c  main.c  modem_clocks.c
testing/: pyproject.toml
testing/protos/: interface.proto
testing/src/client/: __main__.py  interface_pb2.py  main.py  protocol.py
